--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -149,10 +149,14 @@ a.black-text {
   margin-top: 10px;
 }
 
-.thumb-post img {
-  object-fit: none; /* Do not scale the image */
-  object-position: center; /* Center the image within the element */
-  width: 100%;
-  max-height: 250px;
-  margin-bottom: 1rem;
+
+.smol-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.smol-gutters > .col,
+.smol-gutters >[class*="col-"] {
+  padding-right: 10px;
+  padding-left: 10px;
 }
