--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -12,6 +12,7 @@ body {
 }
 
 body {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     /*padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */*/
 }
 
