--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -12,7 +12,8 @@ body {
 }
 
 body {
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+/*   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
+    font-family: 'Arvo', serif;
     /*padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */*/
 }
 
