--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -13,7 +13,8 @@ body {
 
 body {
 /*   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
-    font-family: 'Arvo', serif;
+/*     font-family: 'Arvo', serif; */
+    font-family: 'Dosis', sans-serif;
     /*padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */*/
 }
 
