--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -11,6 +11,10 @@ body {
     height: 100%;
 }
 
+body .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    font-family: 'Arvo', serif;
+}
+
 body {
 /*   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
 /*     font-family: 'Arvo', serif; */
